@@ -66,11 +66,11 @@
 		/** Programmer ID string, returned to the host during the CMD_SIGN_ON command processing. */
 		#define PROGRAMMER_ID              "AVRISP_MK2"
 		
-		/** Timeout period for each issued command from the host before it is aborted. */
-		#define COMMAND_TIMEOUT_MS         200
+		/** Timeout period for each issued command from the host before it is aborted (in 10ms ticks). */
+		#define COMMAND_TIMEOUT_TICKS      100
 		
 		/** Command timeout counter register, GPIOR for speed. */
-		#define TimeoutMSRemaining         GPIOR0
+		#define TimeoutTicksRemaining      GPIOR0
 
 		/** MUX mask for the VTARGET ADC channel number. */
 		#define VTARGET_ADC_CHANNEL_MASK   _GETADCMUXMASK(ADC_CHANNEL, VTARGET_ADC_CHANNEL)
