@@ -44,6 +44,8 @@
   *  - Fixed void pointer arithmetic in ConfigDescriptor.h breaking C++ compatibility (thanks to Michael Hennebry)
   *  - Fixed broken PDI EEPROM Section Erase functionality in the AVRISP-MKII project
   *  - Fixed USB_Device_SendRemoteWakeup() not working when the USB clock was frozen during USB bus suspend (thanks to Brian Dickman)
+  *  - Fixed occasional lockup of the AVRISP project due to the timeout extension code incorrectly extending the timeout in
+  *    PDI and TPI programming modes infinitely
   *
   *  \section Sec_ChangeLog100513 Version 100513
   *  <b>New:</b>
